# token

./: Cargo.toml  package.json
contract/: Cargo.toml  compile.js
contract/src/: external.rs  lib.rs
test-integration/: token.test.js
tests/sim/: utils.rs
