[package]
name = "poolparty_token_wrapper"
version = "1.0.0"
authors = ["Guillermo Gallardo <gagdiez@poolparty.ar>"]
edition = "2018"

[dev-dependencies]
near-sdk = "3.1.0"
near-sdk-sim = "3.1.1"

# remember to include a line for each contract
poolparty_token = { path = "./contract" }
defi = { path = "./test-contract-defi" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "contract",
  "test-contract-defi",
]
